[package]
name = "tcp-test"
version = "0.1.0"
authors = ["belohnung <projektarbeityt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
mc-varint = {path="../mc-varint"}
rand = "0.7.2"
serde = "1.0.101"
serde_json="1.0.41"
