[package]
name = "tcp-test"
version = "0.1.0"
authors = ["belohnung <projektarbeityt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
mc-varint = { path = "../mc-varint" }
rand = "0.7.2"
serde = "1.0.101"
serde_json = "1.0.41"
byteorder = "1.3.2"
err-derive = "0.2.1"
crossbeam-channel = "0.3.9"
approx = "0.3.2"
flate2 = "1.0"
newtype = "0.2.1"
crypto = "0.0.2"
num-bigint = "0.2.3"
rustc-serialize= "0.3.24"
sha-1 = "0.8.1"
regex = "1.3.1"

